# Agent-Web-Wrapper

./: .gitignore  README.md
agent-web-client/: package-lock.json  package.json
agent-web-client/src/app/: layout.js  page.js  page.module.css
agent-web-client/src/components/: ChatComponent.js
agent-web-server/: Cargo.toml
agent-web-server/src/: agent.rs  auth.rs  config.rs  controller.rs  main.rs  protocol.rs  states.rs  store.rs  tracing.rs
