[package]
name = "agent-web-server"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.30", features = ["derive"] }
anyhow = "1.0.96"
async-openai = "0.27.2"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
toml = "0.8.20"
indoc = "2.0.5"
tokio = { version = "1.43.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = [
    "time",
    "env-filter",
    "registry",
] }
tracing-appender = "0.2.3"
time = { version = "0", features = ["local-offset", "macros"] }
axum = "0.8.1"
tower-http = { version = "0", features = ["fs", "cors"] }
uuid = { version = "1", features = ["v4", "macro-diagnostics"] }
sqlx = { version = "0.8.3", features = ["runtime-tokio", "sqlite"] }
jwt-simple = "0.12.11"
strum = { version = "0.27.1", features = ["derive"] }

[profile.release]
lto = true
